force-app/main/default/objects/Product_Fee__c.object
<CustomObject>
    <description>This object is used to hold pricing data for products which is mastered externally and does not map to provided pricing methods appropriately.</description>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Year__c</fullName>
        <label>Fee Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Healthcare_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Healthcare Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Overseas_Student_Health_Cover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Healthcare_Type__c</fullName>
        <label>Healthcare Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SINGLE</fullName>
                </value>
                <value>
                    <fullName>FAMILY-DUA</fullName>
                </value>
                <value>
                    <fullName>FAMILY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>This field is used to migrate records between environments</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to migrate records between environments</inlineHelpText>
        <label>Migration Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Period_Cover__c</fullName>
        <label>Period Cover</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Rule_Identifier__c</fullName>
        <description>This field is used to uniquely identify a row</description>
        <formula>Case(RecordTypeDevName__c, 


&quot;OSHC&quot;,
TEXT(Healthcare_Type__c) &amp; &quot;|&quot; &amp;
TEXT(Period_Cover__c) &amp; &quot;|&quot;
, 
&quot;Other&quot;, &quot;Not defined&quot;, 

&quot;ERROR&quot;)</formula>
        <inlineHelpText>This field is used to uniquely identify a row</inlineHelpText>
        <label>Price Rule Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prov_Amount__c</fullName>
        <label>Prov Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordTypeDevName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>RecordTypeDevName</label>
        <type>Text</type>
    </fields>
    <label>Product External Fee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fee_Year__c</columns>
        <columns>Price_Rule_Identifier__c</columns>
        <columns>Prov_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FN-{00000000}</displayFormat>
        <label>Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product External Fees</pluralLabel>
    <recordTypes>
        <fullName>OSHC</fullName>
        <active>true</active>
        <description>This represents fees overseas student health cover</description>
        <label>OSHC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Placeholder other fees</description>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>